fix for scrollbar always appearing

--- a/resources/sass/custom-theme/page.scss
+++ b/resources/sass/custom-theme/page.scss
@@ -1,6 +1,6 @@
 .page {
     margin-top: $navbar-height;
-    //min-height: 1px;
+    min-height: 1px;
 }
 
 body {
